# noid-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  server.toml  server.toml.example
.github/workflows/: release.yml
crates/noid-client/: Cargo.toml
crates/noid-client/src/: api.rs  cli.rs  config.rs  console.rs  exec.rs  main.rs  update.rs
crates/noid-core/: Cargo.toml
crates/noid-core/src/: auth.rs  backend.rs  config.rs  db.rs  exec.rs  lib.rs  network.rs  storage.rs  vm.rs
crates/noid-netd/: Cargo.toml
crates/noid-netd/src/: addressing.rs  main.rs  netlink.rs  tap.rs
crates/noid-server/: Cargo.toml
crates/noid-server/src/: config.rs  console.rs  handlers.rs  main.rs  router.rs  transport.rs  update.rs  ws_exec.rs
crates/noid-types/: Cargo.toml
crates/noid-types/src/: lib.rs
docs/: client-guide.md  golden-snapshots.md  server-guide.md
scripts/: install-server.sh  install.sh  noid-netd.service  noid-server.service  provision-golden.sh  test-e2e-tls.sh  test-golden-entropy.sh  test-installer.sh
src/: cli.rs  config.rs  console.rs  db.rs  main.rs  storage.rs  vm.rs
