[package]
name = "noid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process", "fs"] }
tabled = "0.17"
