[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "noid-local"
version = "0.2.8"
edition = "2021"

[[bin]]
name = "noid-local"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process", "fs"] }
tabled = "0.17"
