[package]
name = "noid-client"
version = "0.2.31"
edition = "2021"

[[bin]]
name = "noid"
path = "src/main.rs"

[dependencies]
noid-types = { path = "../noid-types" }
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
crossterm = "0.28"
tabled = "0.17"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
