[package]
name = "noid-core"
version = "0.2.20"
edition = "2021"

[dependencies]
noid-types = { path = "../noid-types" }
rusqlite = { version = "0.31", features = ["bundled"] }
nix = { version = "0.29", features = ["signal", "process", "fs"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
libc = "0.2"
