[package]
name = "noid-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noid-server"
path = "src/main.rs"

[dependencies]
noid-core = { path = "../noid-core" }
noid-types = { path = "../noid-types" }
tiny_http = "0.12"
tungstenite = "0.24"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
sha1 = "0.10"
